--- a/.cproject
+++ b/.cproject
@@ -86,6 +86,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulin/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
@@ -148,6 +150,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulin/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
@@ -214,6 +218,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
@@ -360,6 +366,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulin/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
@@ -384,6 +392,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulin/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
@@ -418,6 +428,8 @@
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/emulin/src/ui}&quot;"/>
                                     									
                                     <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/managers}&quot;"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/src/tools}&quot;"/>
                                     								
                                 </option>
                                 								
